Bug 309174 - Text Editor strips out rich text formatting in Kexi Forms
Summary: Text Editor strips out rich text formatting in Kexi Forms
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.6 beta1
Platform: unspecified All
: NOR normal
Target Milestone: 2.6
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-28 23:02 UTC by Jarosław Staniek
Modified: 2012-12-23 21:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2012-10-28 23:02:35 UTC
Text Editor strips out rich text formatting in Kexi Forms. 

Reproducible: Always

Steps to Reproduce:
1. Paste a rich text to a form's Text Editor widget in data view (Currently the Text Editor does not support formatting actions so pasting is needed); the widget should have data field assigned
2. Accept changes

Actual Results:  
The text is converted to plain and saved.

Expected Results:  
The text is saved as rich text (HTML format).

Currently the Text Editor does not support formatting actions but this is a topic for another report.
Comment 1 Jarosław Staniek 2012-11-01 00:15:35 UTC
Git commit 7010d71206aadd8bab7bfbc90f13a436ed82a517 by Jaroslaw Staniek.
Committed on 29/10/2012 at 01:00.
Pushed by staniek into branch 'calligra/2.5'.

Fix for Text Editor stripping out rich text formatting in Kexi Forms
REVIEW:107120
FIXED-IN:2.5.4

M  +36   -12   kexi/plugins/forms/widgets/kexidbtextedit.cpp

http://commits.kde.org/calligra/7010d71206aadd8bab7bfbc90f13a436ed82a517