Fix for Text Editor stripping out rich text formatting in Kexi Forms

BUG:309174
REVIEW:107120
FIXED-IN:2.5.4